# fathom

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: build-container.yml  codeql.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.1-MILESTONE-AUDIT.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md  v1.2-MILESTONE-AUDIT.md  v1.2-REQUIREMENTS.md  v1.2-ROADMAP.md
.planning/milestones/v1.0-phases/01-calculation-engine/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md
.planning/milestones/v1.0-phases/02-web-layer-and-input-forms/: 02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-SUMMARY.md
.planning/milestones/v1.1-phases/07-dark-mode/: 07-01-PLAN.md  (+6 more)
.planning/phases/01-calculation-engine/: 01-02-SUMMARY.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-web-layer-and-input-forms/: 02-01-PLAN.md  02-03-PLAN.md  02-CONTEXT.md  02-RESEARCH.md  02-UAT.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-results-display-and-charts/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-03-PLAN.md  03-03-SUMMARY.md  03-VALIDATION.md
.planning/phases/04-deployment-and-polish/: 04-01-PLAN.md  04-02-PLAN.md  04-03-PLAN.md  04-RESEARCH.md  04-VALIDATION.md
.planning/phases/05-refactor-form-validation-to-use-pydantic/: 05-01-PLAN.md  05-CONTEXT.md  05-VALIDATION.md
.planning/phases/06-bug-fixes-and-tech-debt-cleanup/: 06-01-SUMMARY.md  06-02-SUMMARY.md  06-VALIDATION.md  06-VERIFICATION.md
.planning/phases/07-dark-mode/: 07-CONTEXT.md  07-VALIDATION.md
.planning/phases/13-centralize-monetary-rounding/: 13-01-SUMMARY.md  13-CONTEXT.md  13-VALIDATION.md  13-VERIFICATION.md
.planning/phases/14-engine-corrections/: 14-02-PLAN.md  14-02-SUMMARY.md  14-VALIDATION.md
.planning/phases/15-validation-and-htmx-guards/: 15-02-SUMMARY.md  15-CONTEXT.md  15-VALIDATION.md  15-VERIFICATION.md
.planning/phases/16-custom-option-cleanup/: 16-01-PLAN.md  16-01-SUMMARY.md  16-CONTEXT.md  16-RESEARCH.md  16-VALIDATION.md
.planning/quick/1-create-github-actions-to-build-container/: 1-CONTEXT.md  1-PLAN.md  1-SUMMARY.md
.planning/quick/2-fix-ux-rough-edge-hide-inflation-tax-col/: 2-PLAN.md  2-SUMMARY.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/: PRD.md  code-review-2026-03-15.md
src/fathom/: __init__.py  amortization.py  app.py  caveats.py  charts.py  config.py  engine.py  formatting.py  forms.py  inflation.py  models.py  money.py  opportunity.py  results.py  routes.py  tax.py  tax_brackets.py
src/fathom/static/: detail_toggle.js  formatting.js  style.css  tooltips.js
src/fathom/templates/: base.html  index.html
tests/: __init__.py  conftest.py  playwright_verify.py  test_amortization.py  test_caveats.py  test_charts.py  test_config.py  test_edge_cases.py  test_engine.py  test_forms.py  test_inflation.py  test_models.py  test_money.py  test_opportunity.py  test_performance.py  test_results_display.py  test_results_helpers.py  test_routes.py  test_tax.py  test_tax_brackets.py  test_tooltips.py  test_visual.py
(+100 files in other folders)
