[project]
name = "fathom"
version = "0.1.0"
description = "A financing options analyzer that compares the true total cost of different financing options"
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Flask",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business :: Financial",
]
readme = "README.md"
authors = [
    { name = "Kris Knigga", email = "kris@knigga.com" }
]
requires-python = ">=3.14"
dependencies = [
    "flask>=3.1.3",
    "gunicorn>=25.1.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
]

[project.scripts]
fathom = "fathom:main"

[build-system]
requires = ["uv_build>=0.10.3,<0.11.0"]
build-backend = "uv_build"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.14
target-version = "py314"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E", "F", "B", "G", "W", "YTT", "ANN", "ASYNC", "S", "FBT", "A", "COM", "C4", "EM", "ICN", "LOG", "PIE", "Q", "RSE", "RET", "SIM", "TID", "TCH", "ARG", "PTH", "FLY", "PERF", "FURB", "RUF", "UP", "D", "I"]
ignore = ["E501", "D203", "D212", "W505", "COM812"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ANN", "TCH"]

[tool.ty.src]
exclude = ["tests/"]

[tool.pyrefly]
project_excludes = ["tests/"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "playwright>=1.58.0",
    "prek>=0.3.5",
    "pyrefly>=0.55.0",
    "pytest>=9.0.2",
    "ruff>=0.15.5",
    "ty>=0.0.21",
]
